[package]
name = "netray-common"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Shared utilities for the netray.info service ecosystem"
repository = "https://github.com/netray-info/netray-common"
homepage = "https://netray.info"
keywords = ["networking", "security", "middleware", "axum"]
categories = ["web-programming::http-server"]
rust-version = "1.75"

[features]
schema = ["dep:utoipa"]
middleware = ["dep:uuid"]

[dependencies]
# HTTP framework (for HeaderMap, StatusCode, IntoResponse)
axum = { version = "0.8", features = ["json"] }

# Optional: ToSchema derives for ErrorResponse / ErrorInfo
utoipa = { version = "5", optional = true }

# Optional: UUID v7 for request ID generation (used by middleware feature)
uuid = { version = "1", features = ["v7"], optional = true }

# Rate limiting
governor = "0.10"

# CIDR support for trusted proxy matching
ip_network = "0.4"

# Metrics
metrics = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
