[package]
name = "netray-common"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Shared utilities for the netray.info service ecosystem"
repository = "https://github.com/netray-info/netray-common"
homepage = "https://netray.info"
keywords = ["networking", "security", "middleware", "axum"]
categories = ["web-programming::http-server"]
rust-version = "1.75"

[features]
schema = ["dep:utoipa"]
middleware = ["dep:uuid"]
telemetry = ["dep:tracing-subscriber", "dep:tracing-log"]
otel = ["telemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
cors = ["dep:tower-http"]

[dependencies]
# HTTP framework (for HeaderMap, StatusCode, IntoResponse)
axum = { version = "0.8", features = ["json"] }

# Optional: ToSchema derives for ErrorResponse / ErrorInfo
utoipa = { version = "5", optional = true }

# Optional: UUID v7 for request ID generation (used by middleware feature)
uuid = { version = "1", features = ["v7"], optional = true }

# Rate limiting
governor = "0.10"

# CIDR support for trusted proxy matching
ip_network = "0.4"

# Metrics
metrics = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"

# Optional: tracing-subscriber (telemetry feature)
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"], optional = true }
tracing-log = { version = "0.2", optional = true }

# Optional: tower-http (cors feature)
tower-http = { version = "0.6", features = ["cors"], optional = true }

# Optional: OpenTelemetry (otel feature)
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["http-proto"], optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
